--- a/app/Ingest/Ingest.html
+++ b/app/Ingest/Ingest.html
@@ -12,6 +12,10 @@
         </li>
     </ol>
 </div>
+<div class="row">
+    <input type="checkbox" ng-model="weekend_enabled[0]" id="weekend_enabled"/>
+    <label for="weekend_enabled">Show/Hide Weekend</label>
+</div>
 
 <div class="">
     <div class="row">
