--- a/app/Display/Display.html
+++ b/app/Display/Display.html
@@ -1,28 +1,33 @@
 <div>
     View your timetable:
     <ul>
-        <li>Below is a colour key for every course in your timetable. Clicking on a course in the key will toggle its
-            presence on the timetable view.
+        <li>Below is a colour key for every course in your timetable. Clicking on a course in
+            the key will toggle its presence on the timetable view.
         </li>
-        <li>Every option for every class is displayed in its timeslot below. Options can be clicked to toggle selection,
-            indicating that timeslot as the one you wish to attend.
+        <li>Every option for every class is displayed in its timeslot below. Options can be 
+            clicked to toggle selection, indicating that timeslot as the one you wish to 
+            attend.
         </li>
-        <li>In brackets after the name of the class is the option number (e.g. a class with 3 tutorials will have
-            tutorial (1), tutorial (2) and tutorial (3)). These numbers help identify long overlapping options.
+        <li>In brackets after the name of the class is the option number (e.g. a class with 3
+            tutorials will have tutorial (1), tutorial (2) and tutorial (3)). These numbers 
+            help identify long overlapping options.
         </li>
-        <li>Classes which last for more than one hour are displayed in every timeslot which they fill, however only the
-            first (non 'continued') appearance can be used to select that class. Continued options are also displayed
-            slightly lighter than their initial hour.
+        <li>Classes which last for more than one hour are displayed in every timeslot which 
+            they fill, however only the first (non 'continued') appearance can be used to 
+            select that class. Continued options are also displayed slightly lighter than 
+            their initial hour.
         </li>
-        <li>Once a selection has been made for every class in each course, Preview Mode becomes available which hides
-            selected options and allows you to see what your final timetable will look like.
+        <li>Once a selection has been made for every class in each course, Preview Mode 
+            becomes available which hides selected options and allows you to see what your 
+            final timetable will look like.
         </li>
     </ul>
 </div>
 
 <!-- Course Key -->
 <div class="row">
-    <div ng-repeat="course in courses" class="col s2" ng-click="course.active=!course.active">
+    <div ng-repeat="course in courses" class="col s2" 
+        ng-click="course.active=!course.active">
         <div ng-if="course.active" class="{{course.colour}} lighten-2">
             {{course.name}}
         </div>
@@ -33,10 +38,11 @@
 </div>
 
 <div class="row">
-    <input type="checkbox" ng-model="preview_mode" id="preview_mode" ng-disabled="!selections_complete()"/>
+    <input type="checkbox" ng-model="preview_mode" id="preview_mode" 
+    ng-disabled="!selections_complete()"/>
     <label for="preview_mode">Preview Mode (Display only selected options)</label>
     <input type="checkbox" ng-model="weekend_enabled[0]" id="weekend_enabled"/>
-    <label for="weekend_enabled">Show/Hide Weekend</label>
+    <label for="weekend_enabled">Show Weekend</label>
 </div>
 <!-- Calendar -->
 <table class="striped">
@@ -45,7 +51,7 @@
         <th>
             <!--Empty header column for the left side time scale-->
         </th>
-        <th ng-repeat="day in day_range">
+        <th ng-repeat="day in day_range()">
             {{day}}
         </th>
     </tr>
@@ -54,10 +60,11 @@
         <th>
             {{i}}
         </th>
-        <td ng-repeat="day in day_range">
+        <td ng-repeat="day in day_range()">
 
             <div ng-repeat="bundle in bundles | filter: {opt: {day: day, time: i}}">
-                <div ng-if="bundle.course.active && bundle.opt.selected" class="{{bundle.course.colour}} lighten-2"
+                <div ng-if="bundle.course.active && bundle.opt.selected" 
+                     class="{{bundle.course.colour}} lighten-2"
                      ng-click="toggle_active(bundle)">
                     {{bundle.course.name}} {{bundle.clss.name}} ({{bundle.opt.id}})
                 </div>
@@ -70,13 +77,16 @@
             </div>
 
             <div ng-repeat="bundle in cont_bundles | filter: {opt: {day: day, time: i}}">
-                <div ng-if="bundle.course.active && bundle.parent.selected" class="{{bundle.course.colour}} lighten-3">
-                    {{bundle.course.name}} {{bundle.clss.name}} ({{bundle.parent.id}} continued)
+                <div ng-if="bundle.course.active && bundle.parent.selected" 
+                    class="{{bundle.course.colour}} lighten-3">
+                    {{bundle.course.name}} {{bundle.clss.name}} ({{bundle.parent.id}} 
+                    continued)
                 </div>
 
                 <div ng-if="!preview_mode && bundle.course.active && !bundle.parent.selected"
                      class="{{bundle.course.colour}} lighten-5">
-                    {{bundle.course.name}} {{bundle.clss.name}} ({{bundle.parent.id}} continued)
+                    {{bundle.course.name}} {{bundle.clss.name}} ({{bundle.parent.id}} 
+                    continued)
                 </div>
             </div>
         </td>
