Change menu entry from ingest to input

--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
 <ul class="menu">
-    <li><a href="#!/Ingest">Ingest</a></li>
+    <li><a href="#!/Ingest">Input</a></li>
     <li><a href="#!/Parser">Parser</a></li>
     <li><a href="#!/Display">Display</a></li>
 </ul>
