--- a/app/index.html
+++ b/app/index.html
@@ -44,7 +44,7 @@
 
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/angular-route/angular-route.js"></script>
-<script src="bower_components/htmlparser/node-htmlparser.js"></script>
+<script src="./bower_components/htmlparser/node-htmlparser.js"></script>
 <script src="app.js"></script>
 <script src="Ingest/Ingest.js"></script>
 <script src="Display/Display.js"></script>
