--- a/app/Display/Display.html
+++ b/app/Display/Display.html
@@ -39,7 +39,7 @@
 
 <div class="row">
     <input type="checkbox" ng-model="preview_mode" id="preview_mode" 
-    ng-disabled="!selections_complete()"/>
+    ng-disabled="no_courses()"/>
     <label for="preview_mode">Preview Mode (Display only selected options)</label>
     <input type="checkbox" ng-model="weekend_enabled[0]" id="weekend_enabled"/>
     <label for="weekend_enabled">Show Weekend</label>
